--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 .fixed-button {
     position: fixed;
     bottom: 90px;
-    right: 20px;
+    right: 10px;
     z-index: 999;
     animation: floating 3s infinite ease-in-out;
   }
@@ -718,7 +718,7 @@ section .title::after{
 }
 /* footer section styling */
 footer{
-    background: #111;
+    background: #474747;
     padding: 15px 23px;
     color: #fff;
     text-align: center;
@@ -926,7 +926,7 @@ footer span a:hover{
 
 
 .about .about-content .right .text{
-    font-size: 30px;
+    font-size: 22px;
     font-weight: 600;
     margin-bottom: 10px;
 }
@@ -937,6 +937,9 @@ footer span a:hover{
 
 }
 
+
+
+/* smaller mobile screen */
 @media (max-width: 500px) {
     .home .home-content .text-1{
         font-size: 17px;
