--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 .fixed-button {
     position: fixed;
     bottom: 90px;
-    right: 10px;
+    right: 15px;
     z-index: 999;
     animation: floating 3s infinite ease-in-out;
   }
@@ -53,7 +53,7 @@
     font-weight: bold;
     padding: 8px;
     font-size: 12px;
-    opacity: 1;
+    opacity: 0;
     transition: opacity 0.3s ease-in-out;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.295);
     
@@ -81,7 +81,8 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:   'Poppins', sans-serif;
+    background: black;
 }
 
 /* custom scroll bar */
@@ -677,7 +678,7 @@ section .title::after{
     height: 100%;
     width: 100%;
     border: 1px solid lightgrey;
-    border-radius: 6px;
+    border-radius: 7px;
     outline: none;
     padding: 0 15px;
     font-size: 17px;
@@ -686,7 +687,7 @@ section .title::after{
 }
 .contact .right form .field input:focus,
 .contact .right form .textarea textarea:focus{
-    border-color: #b3b3b3;
+    border-color: #03b215;
 }
 .contact .right form .textarea textarea{
   padding-top: 10px;
@@ -715,7 +716,57 @@ section .title::after{
 .right form .button-area button:hover{
   color: #52aa5e;
   background: none;
+
 }
+
+
+.connect-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    margin: 30px;
+    background-color: black;
+    color: white;
+}
+
+
+.connect-heading {
+    font-size: 26px;
+    margin-bottom: 50px;
+}
+
+.social-icons {
+    display: flex;
+    align-items: center;
+   
+}
+
+.icon-link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 10px;
+    
+}
+
+/* You can customize the styles for the social media icons as needed */
+.icon-link img {
+    width: 40px;
+    height: 40px;
+   
+}
+
+.icon-name {
+    margin-top: 5px;
+    color: #fff;
+}
+
+
+
+
+
 /* footer section styling */
 footer{
     background: #474747;
