--- a/index.css
+++ b/index.css
@@ -936,6 +936,10 @@ border-bottom-right-radius: 60px;
     .max-width{
         padding: 0 23px;
     }
+    .home{
+        background: url("images/Mobile.png") no-repeat 
+        center;
+    }
 
     .home .home-content .text-1{
         font-size: 18px;
