--- a/index.css
+++ b/index.css
@@ -91,6 +91,18 @@
     box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.2);
 }
 
+.drawer {
+    width: 200px;
+    height: 4px;
+    border-radius: 10%;
+    background-color: black;
+    margin: 5px auto;
+    cursor: pointer;
+    position: relative;
+    top: -30px;
+    
+}
+
 #popup p{
     margin-bottom: 20px;
     color: #fff;
@@ -102,7 +114,7 @@
     padding: 20px;
     color: #fff;
     font-weight: bold;
-    border: 2px solid black;
+    border: 3.5px solid black;
 }
 
 #popup button:hover{
