--- a/about.css
+++ b/about.css
@@ -242,12 +242,13 @@ h2 {
 }
 
 .about-about p{
-    max-width: 900px;
+    max-width: 800px;
 }
 
 
 .image-container {
     display: flex;
+    height: 300px;
     justify-content: center;
     align-items: center;
     margin-bottom: 20px;
