--- a/about.css
+++ b/about.css
@@ -152,6 +152,10 @@ body{
     align-items: center;
     height: 600px;
 }
+p{
+    font-size: 17px;
+    max-width: 1000px;
+}
 
 h1 {
     font-size: 80px;
@@ -187,13 +191,12 @@ h2 {
     margin-top: 40px;
     display: flex;
     gap: 10px;
-    font-size: 20px;
     font-weight: bold;
 }
 
 .btn {
-    padding: 10px 20px;
-    font-size: 16px;
+    padding: 20px 30px;
+    font-size: 17px;
     background-color: #52aa5e;
     border:  3px solid #52aa5e;
     color: #fff;
@@ -242,13 +245,13 @@ h2 {
 }
 
 .about-about p{
-    max-width: 800px;
+    max-width: 900px;
 }
 
 
 .image-container {
     display: flex;
-    height: 300px;
+   
     justify-content: center;
     align-items: center;
     margin-bottom: 20px;
@@ -257,8 +260,8 @@ h2 {
 }
 
 .image-container img {
-    max-width: 120px;
-    max-height: 120px;
+    max-width: 70px;
+  
     border: 4px solid white;
     border-radius: 50%;
     margin-right: 9px;
