--- a/project.css
+++ b/project.css
@@ -613,13 +613,13 @@ section .title::after{
 .home .home-content a{
     display: inline-block;
     background: rgba(255, 166, 0, 0);
-    color: orange;
+    color: rgb(255, 255, 255);
     font-size: 20px;
     padding: 12px 36px;
     margin-top: 20px;
     font-weight: 400;
     border-radius: 10px;
-    border: 2px solid orange;
+    border: 2px solid rgb(255, 255, 255);
     transition: all 0.3s ease;
     
 }
@@ -1410,6 +1410,7 @@ padding: 120px;
   color: var(--raw-seinna);
   text-decoration: underline;
   margin-inline: auto;
+  text-align: center;
 }
 
 
