--- a/hireme.css
+++ b/hireme.css
@@ -12,8 +12,8 @@
     background-color: #fff;
     padding: 40px;
     margin: 20px;
-    border-radius: 10px;
-    box-shadow: 0 2px 50px rgba(0, 0, 0, 0.253);
+    border-radius: 20px;
+    box-shadow: 0 2px 70px rgba(0, 0, 0, 0.404);
     width: 100%;
     max-width: 800px;
 }
@@ -56,16 +56,32 @@
 }
 
 #hire-me-form input,
+#hire-me-form select {
+    margin-bottom: 20px;
+    padding: 10px;
+    border: 1px solid transparent;
+    border-radius: 10px;
+    background: #ddd;
+    font-size: 16px;
+    width: 100%;
+    box-sizing: border-box;
+}
 #hire-me-form textarea {
     margin-bottom: 20px;
     padding: 10px;
-    border: 2px solid #0e0e0e;
+    border: 1px solid transparent;
     border-radius: 10px;
+    background: #ddd;
     font-size: 16px;
     width: 100%;
     box-sizing: border-box;
 }
 
+#hire-me-form input:focus,
+#hire-me-form textarea:focus {
+    border-color: #ffbb00;
+    outline: none;
+}
 
 #hire-me-form button {
     padding: 15px;
